en for about us

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,11 +1,53 @@
 {
-    "Acceuil":"Home",
+    "Accueil":"Home",
     "Nos chambres":"Our Rooms",
     "Nos services" : "Our Services",
     "Contact" : "Contact",
     "À propos de nous" : "About Us",
     "Admin" : "Admin",
-    "Réserver Maintenant" : "Book Now",
+    "Réservation" : "Reservation",
+    "Réserver" : "To book",
+    "Réserver maintenant" : "Book Now",
+    "Hotel Cote d'or jouit d'un emplacement idéal au bord de la mer. Il propose des chambres confortables avec une vue extraordinaire .Ces chambres pratiques et confortables sont insonorisées et dotées de la climatisation, d'une salle de bains moderne, et d'une télévision avec chaînes internationales. L'accès Internet sans fil gratuit est disponible dans tout l'établissement.Dégustez un repas dans notre restaurant de l'hôtel qui sert différents plats . L'hôtel est situé à proximité de la mer de M'diq, du Corniche, des taxis et de la mosquée. Le personnel courtois sera ravi de vous aider et vous accueillera chaleureusement." : "Hotel Cote d'Or enjoys an ideal location by the sea.It offers comfortable rooms with an extraordinary view.These practical and comfortable rooms are soundproofed and equipped with air conditioning,a modern bathroom, and a television with international channels.Free wireless Internet access is available throughout the property.Enjoy a meal in our hotel restaurant which serve different dishes.The hotel is located near the sea of M'diq, the Corniche, taxis and the mosque.The courteous staff will be happy to help you and will welcome you warmly.",
+    "Notation" : "Rating",
+    "Très bien" : "Very Good",
+    "INSTALLATIONS ET SERVICES" : "FACILITIES AND SERVICES",
+    "Hôtel" : "Hotel",
+    "Restaurant" : "Restaurant",
+    "Cafétéria" : "Cafeteria",
+    "Service d'étage" : "Room Service",
+    "Chambres familiales" : "Family rooms",
+    "Plage" : "Beach",
+    "Bienvenue à l'Hôtel Côte d'Or" : "Welcome to the Hotel Côte d'Or",
+    "Notre hôtel est le choix parfait pour les voyageurs à la recherche d'un séjour confortable et abordable avec une vue imprenable sur la Méditerranée. ":"Our hotel is the perfect choice for travelers looking for a comfortable and affordable stay with stunning views of the Mediterranean.",
+    " Nous sommes situés en plein cœur de la ville, à quelques pas des principales attractions touristiques et des restaurants locaux." : "We are located right in the heart of the city, within walking distance of major tourist attractions and local restaurants.",
+    "Voir aussi" : "See more",
+    "Notre équipe" : "Our team",
+    "Avec nous, vous pouvez profiter d'un hébergement confortable à des tarifs compétitifs. Nos chambres sont équipées de tout ce dont vous avez besoin pour un séjour agréable, notamment une salle de bain privée, la climatisation, la télévision et un accès Wi-Fi gratuit." : "With us you can enjoy comfortable accommodation at competitive rates. Our rooms are equipped with everything you need for a pleasant stay, including a private bathroom, air conditioning, television and free Wi-Fi access.",
+    "Les points de vue" : "The points of view",
+    "J'ai passé un merveilleux séjour dans cet hôtel avec vue sur la mer. L'emplacement est tout simplement incroyable, avec une vue imprenable sur l'océan. Le personnel était très sympathique et accueillant, et m'a fait me sentir comme chez moi dès mon arrivée.Le restaurant de l'hôtel proposait une cuisine délicieuse, en particulier leur spécialité de fruits de mer frais. J'ai également été impressionné par la qualité des cocktails préparés par le barman.Ma chambre était spacieuse et confortable, avec une vue magnifique sur l'océan. J'ai adoré écouter les vagues se briser sur la plage chaque matin.Je recommande vivement cet hôtel à tous ceux qui cherchent un séjour relaxant au bord de la mer avec une cuisine délicieuse et un personnel amical et attentionné. Je prévois déjà de revenir l'année prochaine pour profiter de cet endroit exceptionnel une fois de plus." : "I had a wonderful stay at this sea view hotel. The location is just amazing, with an amazing view of the ocean. The staff were very friendly and welcoming and made me feel at home from the moment I arrived. The hotel restaurant had delicious food, especially their fresh seafood specialty. I was also impressed with the quality of the cocktails prepared by the bartender. My room was spacious and comfortable with a great view of the ocean. I loved listening to the waves crashing on the beach each morning. I highly recommend this hotel to anyone looking for a relaxing stay by the sea with delicious food and friendly, attentive staff. I am already planning to come back next year to enjoy this exceptional place again.",
+    "Notre Restaurant" : "Our restaurant",
+    "Notre restaurant est l'endroit idéal pour savourer des plats locaux tout en profitant de la vue sur la mer Méditerranée. Nous sommes fiers de proposer une cuisine fraîche et délicieuse préparée à partir d'ingrédients locaux de première qualité..." : "Our restaurant is the perfect place to savor local dishes while enjoying the view of the Mediterranean Sea. We pride ourselves on offering fresh and delicious cuisine prepared from premium local ingredients.",
+    "Cuisine marocaine" : "Moroccan cuisine",
+    "Nous sommes fiers de proposer des plats traditionnels marocains ainsi que des options plus modernes pour répondre à tous les goûts. Nous nous approvisionnons en produits frais et de qualité supérieure auprès de fournisseurs locaux, afin de garantir que chaque bouchée est pleine de saveurs délicieuses." : "Nous sommes fiers de proposer des plats traditionnels marocains ainsi que des options plus modernes pour répondre à tous les goûts. Nous nous approvisionnons en produits frais et de qualité supérieure auprès de fournisseurs locaux, afin de garantir que chaque bouchée est pleine de saveurs délicieuses.",
+    "Cuisine italienne" : "Italien cuisine",
+    "Notre cuisine italienne est inspirée par les saveurs authentiques de l'Italie, avec des plats préparés à partir d'ingrédients frais et de qualité supérieure. Que vous cherchiez à déguster une pizza fraîche sortie du four ou des pâtes fraîches faites maison, nous avons quelque chose pour satisfaire toutes les papilles." : "Our Italian cuisine is inspired by the authentic flavors of Italy, with dishes prepared using fresh, top quality ingredients. Whether you're looking to enjoy pizza fresh from the oven or fresh homemade pasta, we have something to satisfy every taste bud.",
+    "Bienvenue dans notre galerie" : "Welcome to our gallery",
+    "Galerie de notre hôtel" : "Gallery of our hotel",
+    "Regarder la galerie" : "See the gallery",
+
+
+
+    "Liens Rapides" : "Quick Links",
+    "Liens Supplémentaires" : "Liens Supplémentaires",
+    "Poser des questions" : "Ask questions",
+    "Service d'été" : "Summer service",
+    "Près de nous" : "Close to us",
+    "Les offres de Cote d'Or" : "Cote d'Or offers",
+    "Infos de contact" : "Contact Info",
+    "Tous les droits sont réservés!" : "All rights reserved",
+    "Suivez-nous" : "Follow us",
+
     "(and :count more error)": "(and :count more error)",
     "(and :count more errors)": "(and :count more errors)",
     "A new verification link has been sent to the email address you provided during registration.": "A new verification link has been sent to the email address you provided during registration.",
