--- a/lang/en.json
+++ b/lang/en.json
@@ -37,9 +37,28 @@
     "Regarder la galerie" : "See the gallery",
 
 
+    "NOS CHAMBRES" : "OUR ROOMS",
+    "Equipée de lits confortables, de tables de chevet avec des lampes de lecture, d'un bureau et d'une chaise pour travailler, ainsi que d'une télévision à écran plat pour se divertir. La chambre dispose également d'une salle de bain privative avec douche ou baignoire, serviettes et articles de toilette de base. " : "Equipped with comfortable beds, bedside tables with reading lamps, a desk and chair for working, and a flat screen TV for entertainment. The room also has a private bathroom with shower or bathtub, towels and basic toiletries.",
+    "Détails et photos" : "Details and pictures",
+    "avec petit déjeuner" : "with breakfast",
+    "Chambre Simple" : "Simple Room",
+    "Chambre Double" : "Double Room",
+    "Chambre Triple" : "Triple Room",
+    "Chambre Quadruple" : "Quadruple Room",
+    "Suite" : "Suite",
+    "Appartement" : "Apartment",
+    "Prix par nuit:" : "Price per night:",
+    "Annulation GRATUITE avant minimum 1 semaine":"FREE cancellation before minimum 1 week",
+    "PAYEZ PLUS TARD" : "PAY LATER",
+    "INCLUS DANS LE TARIF (1)" : "INCLUDED IN THE RATE (1)",
+    "Petit déjeuner pour deux chaque jour":"Breakfast for two each day",
+    "Pour bénéficier, de nos offres , vous pouvez réserver avant plus d'une semaine " : "To benefit from our offers, you can book before more than a week",
+    "Retour à la liste des chambres" : "Back to the list of rooms",
+
+
 
     "Liens Rapides" : "Quick Links",
-    "Liens Supplémentaires" : "Liens Supplémentaires",
+    "Liens Supplémentaires" : "Additional Links",
     "Poser des questions" : "Ask questions",
     "Service d'été" : "Summer service",
     "Près de nous" : "Close to us",
