en for our services

--- a/lang/en.json
+++ b/lang/en.json
@@ -56,6 +56,19 @@
     "Retour à la liste des chambres" : "Back to the list of rooms",
 
 
+    "NOS SERVICES" : "OUR SERVICES",
+    "DES CHAMBRES ENTIÈREMENT ÉQUIPÉE, DE DIFFÉRENTS SERVICES A EN BÉNÉFICIER" : "FULLY EQUIPPED ROOMS, DIFFERENT SERVICES TO BENEFIT FROM",
+    "Ménage" : "Menage",
+    "Blanchisserie" : "Laundry",
+    "Service de chambre" : "Room service",
+    "Bagagerie" : "luggage service", 
+    "Wifi Disponible" : "Wi-Fi Available",
+    "La connexion WiFi est disponible dans toutes les chambres, ainsi que dans les espaces communs tels que le hall et le restaurant ." : "The WiFi connection is available in all rooms, as well as in common areas such as the lobby and the restaurant.",
+    "Notre personnels veille à ce que toutes les chambres soient propres avant votre arrivée , ce qui les poussent à bien nettoyer la chambre tous les jours." : "Our staff ensures that all the rooms are clean before your arrival, which encourages them to clean the room well every day.",
+    "Lors de votre séjour , notre personnel s'occupe du lavage , séchage et même repassage des vêtements." : "During your stay, our staff takes care of the washing, drying and even ironing of clothes.",
+    "Votre petit déjeuner arrive chez vous dès le matin , il vous suffit juste de demander." : "Your breakfast arrives at your door in the morning, you just have to ask.",
+    "Votre confort est notre joie , Lors de votre séjour ne pensez pas à votre bagage , nous nous occupons de tous , pensez à votre confort." : "Your comfort is our joy, during your stay do not think about your luggage, we take care of everything, think about your comfort.",
+
 
     "Liens Rapides" : "Quick Links",
     "Liens Supplémentaires" : "Additional Links",
