en for contact us

--- a/lang/en.json
+++ b/lang/en.json
@@ -70,6 +70,16 @@
     "Votre confort est notre joie , Lors de votre séjour ne pensez pas à votre bagage , nous nous occupons de tous , pensez à votre confort." : "Your comfort is our joy, during your stay do not think about your luggage, we take care of everything, think about your comfort.",
 
 
+    "CONTACTEZ-NOUS" : "CONTACT US",
+    "Si vous avez des questions , n'hésitez pas de nous contacter si-dessous et nous vous répondrons le plus tôt possible." : "If you have any questions, do not hesitate to contact us below and we will answer you as soon as possible.",
+    "Nom :": "Name :",
+    "ENVOYER" : "SEND",
+    "Général" : "General",
+    "Maroc" : "Morocco",
+    "Média" : "Media",
+    "Téléphone" : "Telephone",
+
+
     "Liens Rapides" : "Quick Links",
     "Liens Supplémentaires" : "Additional Links",
     "Poser des questions" : "Ask questions",
