traduction acceuil en

--- a/lang/en.json
+++ b/lang/en.json
@@ -5,7 +5,125 @@
     "Contact" : "Contact",
     "À propos de nous" : "About Us",
     "Admin" : "Admin",
+    "Administrateur": "Admin",
+    "Tél":"Phone",
     "Réserver maintenant" : "Book Now",
+    "Réservation" : "Booking",
+    "Réserver":"Book",
+    "Front de mer":"Seafront",
+    "Service d'étage":"Room Service",
+    "Chambres familiales":"Family Rooms",
+    "Pourquoi":"For what",
+    "clients ont fait le choix de Cote d'or ?":"Customers Have Chosen Cote D'or?",
+    "DÉCOUVREZ CE QUI FAIT NOTRE DIFFÉRENCE":"DISCOVER WHAT MAKES OUR DIFFERENCE",
+    "L'hotel en Bref":"The Hotel In Brief",
+    "INFORMATIONS PRATIQUES":"USEFUL INFORMATION",
+    "RESTAURANTS ET CAFEE":"RESTAURANTS AND CAFÉ",
+    "ENVIRONS DE L'HOTEL ": "SURROUNDINGS OF THE HOTEL",
+    "Adresse":"Adress",
+    "Bon emplacement ":"Good Location",
+    "voir la carte " :" Show Map",
+    "Heure d'arrivée / de départ":"Check-In",
+    "Enregistrement":"Check-Out",
+    "Heure de départmidi":"Check-Out",
+    "Chambres":"Rooms",
+    "Chambres et suites et appartements":" Rooms And Suites And Apartments",
+    " WIFI,TV,coffre-fort dans la chambre":"WIFI, TV, In-Room Safe",
+    "Restaurant, cafetière / théière":"Restaurant, Coffee/Tea Maker",
+    "journal quotidien gratuit":"Free Daily Newspaper",
+    "produits de salle de bains":"Bathroom Products",
+    "de bonne marque":"Top Brand",
+    "L'établissement ne dispose pas de parking":"The Property Does Not Have Parking",
+    "Internet":"Internet",
+    "Espaces publics : gratuit":"Public Areas: Free",
+    "En chambre : gratuit":"In-Room: Free",
+    "Accueil des enfants":"Childcare",
+    "Enfants bienvenus":"Children Welcome",
+    "Services disponibles":"Services Available",
+    "Hôtel climatisé ":"Air-Conditioned Hotel",
+    "Service de blanchisserie":"Laundry Service",
+    "Service de conciergerie":"Concierge Service",
+    "Réception ouverte":"Open",
+    "Service d'étage ":"Front Desk Room Service",
+    "Animaux de compagnie":"Pets",
+    "Chiens non autorisés ":"Dogs Not Allowed",
+    "Politique fumeurs":"Smoking Policy",
+    "Espaces publics non-fumeurs":"Non-Smoking Public Areas",
+    "Chambres fumeurs disponibles":"Smoking Rooms Available",
+    "Langues parlées":"Spoken Languages",
+    "Arabe":"Arabic",
+    "Anglais":"Arabic",
+    "Français":"French",
+    "Activités":"Activities",
+    "plage":"Beach",
+    "Général":"General",
+    "Climatisation":"Air Conditioning",
+    "Chambres familiales ":"Family Rooms",
+
+    "Petit déjeuner":"Breakfast",
+    "Petit déjeuner continental":"Continental Breakfast",
+    "Petit déjeuner américain ":"American Breakfast",
+    "Petit déjeuner buffet":"Buffet Breakfast:",
+    "Petit déjeuner fitness":"Fitness Breakfast",
+    "Petit déjeuner croque speciale":"Croque Special Breakfast",
+    "Petit déjeuner beldi":"Beldi Breakfast",
+    "Petit déjeuner espagnol":"Spanish Breakfast",
+    "Soupe ":"Soup",
+    " Poissons ":"Fish",
+    "Boissons":"Drinks",  
+    "Thé à la menthe":"Mint Tea",
+    "Café Noir":"Black Tea",
+    "Café  au lait":"Coffee Milk",
+    "Café expresso (marque Lavazza)":"Expresso",
+    "Jus d’orange":"Orange Juice",
+    "Jus de fruits frais (selon saison)":"Strawberry Juice",
+    "citron, fraises, melon, pomme, banane":"Lemon,Strawberry,Melon,Apple,Banana",
+    "Cocktail Chamali (betterave / orange / banane)":"Chamali Cocktail",
+    "Jus d'avocat":"Avocado Juice",
+    "carotte":"Carrot",
+    "Jus de concombre au citron et thym":"Juice Cucumber Juice With Lemon And Thyme",
+    "crêpes salées":"Savory Crepes",
+    "Salades":"Salads",
+    "Salade marocaine": "Moroccan Salad",
+    "Salade César":"Caesar Salad",
+    "Salade de riz aux légumes croquants":"Rice Salad With Crunchy Vegetables",
+    "Salade de tomates au basilic":"Tomato Salad With Basil",
+    "Salade de bœuf à la vietnamienne":"Vietnamese Beef Salad",
+    "Patisserie":"Bakery",
+    "Cornets au sesame amande et miel":"Cornets With Sesame Almond And Honey",
+    "Corne de gazelle-Kaab leghzal":"Horn Of Gazelle-Kaab Leghzal",
+    "Ghribas aux noix et aux amandes":"Ghribas With Walnuts And Almonds",
+    "Cigares aux amandes":"Cigars With Almonds",
+    "Sablés fondant à la noisette":"Fondant Shortbread With Hazelnut",
+    "Desserts":"Deserts",
+    "Tarte Oreo":"Oreo Cake",	
+    "Cake à la ricotta et au citron":"Ricotta And Lemon Cake",
+    "Salade de fruits":"Fruit Salad",
+    "Plats marocains":"Moroccan Plates",
+
+
+
+    "Lieux à proximité":"Nearby Places",
+    "Parque Ziana:":"Parc Ziana",
+    "Restaurants et cafés":"Restaurants And Cafes",
+    "Plages à proximité":"Nearby Beaches",
+    "Plage de M'Diq":"M'Diq Beach",
+    "Aéroports les plus proches":"Nearest Airports",
+    "Aéroport Tétouan - Sania R'mel":"Tetouan - Sania R'mel Airport",
+    "Aéroport international de Gibraltar":"Gibraltar International Airport",
+    "Aéroport de Tanger - Ibn Battouta":"Tangier - Ibn Battouta Airport",
+    "Infos generals":"General Info",
+    "Situé à 400 mètres de la plage de M'Diq":"Located 400 Meters From M'diq Beach",
+    "l'hotel cote d'or m'diq propose un hébergement":"Hotel Cote D'or M'diq Offers",
+    "étoiles et un restaurant à M'diq":"Star Accommodation And A Restaurant In M'diq",
+    "Cet hôtel":"This star's hotel",
+    "étoiles propose un service d'étage":"Offers Room Service",
+    "et une réception ouverte":"And A 24-Hour Front Desk",
+    "Certaines ":"Some",
+    "s'ouvrent sur une terrasse avec vue sur la mer ":"Open Onto A Terrace With Sea Views",
+    "L'aéroport de Tétouan-Sania R'mel, le plus proche " :"The Nearest Airport Is Tetouan-Sania R'mel Airport, 17 Km From The Property",
+    
+
     "(and :count more error)": "(and :count more error)",
     "(and :count more errors)": "(and :count more errors)",
     "A new verification link has been sent to the email address you provided during registration.": "A new verification link has been sent to the email address you provided during registration.",
