en for reservation

--- a/lang/en.json
+++ b/lang/en.json
@@ -91,6 +91,28 @@
     "Retour" : "Back",
 
 
+    "LE BON CHOIX" : "THE GOOD CHOICE",
+    "Faites votre réservation , dans la chambre qui vous plait à la date qui vous convient." : "Make your reservation, in the room you like on the date that suits you.",
+    "Bon séjour" : "Have a good stay",
+    "Chambre" : "Room",
+    "Date d'arrivée" : "Arrival date",
+    "Date de départ" : "Date of departure",
+    "Nombre de personnes" : "Number of persons",
+    "Adresse e-mail" : "E-mail Address",
+    "Carte de crédit" : "Credit card",
+    "Annuler" : "Cancel",
+    "OFFRES EXCLUSIVES" : "EXCLUSIVE OFFERS",
+    "Bénéficier de nos offres" : "Take advantage of our offers",
+    "Grand lit,salle de bain , petit déjeuner inclut , wifi et services" : "Double bed, bathroom, breakfast included, wifi and services",
+    "À partir de" : "From",
+    "nuit" : "night",
+    "Voir la disponibilité" : "See availability",
+    "Deux lits twin ,salle de bain , petit déjeuner inclut , wifi et services" : "Two twin beds, bathroom, breakfast included, wifi and services",
+    "Trois lits simples ,salle de bain , petit déjeuner inclut , wifi et services" : "Three single beds, bathroom, breakfast included, wifi and services",
+    "Grand lit et deux lits twin ,salle de bain , petit déjeuner inclut , wifi et services" : "Double bed and two twin beds, bathroom, breakfast included, wifi and services",
+    "Grand lit ,salle de bain , petit salon, petit déjeuner inclut , wifi et services " : "Double bed, bathroom, small living room, breakfast included, wifi and services",
+    "Deux chambres , une avec un grand lit et l'autre avec deux lits twin , salle de bain , salon , cuisine , petit déjeuner inclut , wifi et services " :"Two bedrooms, one with a double bed and the other with two twin beds, bathroom, living room, kitchen, breakfast included, wifi and services",
+
 
 
     "Liens Rapides" : "Quick Links",
