--- a/lang/en.json
+++ b/lang/en.json
@@ -123,6 +123,33 @@
     "s'ouvrent sur une terrasse avec vue sur la mer ":"Open Onto A Terrace With Sea Views",
     "L'aéroport de Tétouan-Sania R'mel, le plus proche " :"The Nearest Airport Is Tetouan-Sania R'mel Airport, 17 Km From The Property",
     
+    "Notre sélection de chambres et suites":"Our selection of rooms and suites",
+"Visiter les chambres":"Visit The rooms",
+"Chambre Double":"Double Bed",
+"Vue: vue sur la mer et la ville , Localization: de 1ere au 3eme etage , Baignoire et douche dans toutes les chambres":"View: view of the sea and the city, Location: from 1st to 3rd floor, Bathtub and shower in all rooms",
+"Chambre Simple":"Simple Room",
+"Chambre Triple":"Triple Room",
+"Chambre Familiale":"Family Room",
+"Chambre Quadruple":"Quadruple Room",
+"Suite":"Suite",
+"Appartement":"Appartement",
+"Nos clients donnent leur avis":"Our Customers Give Their Opinion",
+"CLIENT DEPUIS MAI 2018, ULTIMATE":"CLIENT SINCE MAI 2018, ULTIMATE",
+"Également dans la Collection des offres":"Also In The Offers Collection",
+"lits simples":"Simple Beds",
+"Balcon /Climatisation":"Balcony /Air-conditioning",
+"Salle de bains privative dans l'hébergement":"Private Bathroom In The Accommodation",
+"Télévision à écran plat Terrasse":"Flat-Screen TV Terrace",
+"Wi-Fi Gratuit":"Free WiFi",
+"A partir de":"From",
+"par nuit":"Per Night",
+"Réserver " :"Book",
+"Voir la disponibilité":"Check availability",
+"Chambre Double Standard":"Double Standard Room",
+"2 lits simples":"2 Simple Beds",
+"10 m²Balcon /Climatisation":" 10 m² Balcony /Air-conditioning",
+
+
 
     "(and :count more error)": "(and :count more error)",
     "(and :count more errors)": "(and :count more errors)",
