--- a/lang/en.json
+++ b/lang/en.json
@@ -7,7 +7,10 @@
     "Admin" : "Admin",
     "Administrateur": "Admin",
     "Tél":"Phone",
-   
+    
+"Localisation d'hôtel Cote d'or à M'diq, Maroc":"Hotel Location Cote D'or In M'diq, Morocco",
+"Maroc se trouve dans la ville de M'diq, Maroc":"View On Google Maps",
+"Voir sur Google Maps":"See on Google Maps",
     "Front de mer":"Seafront",
    
     "Pourquoi":"For what",
