--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,5 +1,169 @@
 {
-    "Acceuil":"منزل",
+    
+        "Accueil":" ترحيب",
+        "Nos chambres":"غرفنا",
+        "Nos services" : "خدماتنا",
+        "Contact" : "اتصال",
+        "À propos de nous" : "في ما يخصنا",
+        "Admin" : "مسؤل",
+        "Administrateur": "مسؤل",
+        "Tél":"هاتف",
+        "Réserver maintenant" : "احجز الان",
+        "Réservation" : "الحجز",
+        "Réserver":"احجز ",
+        "Front de mer":"الواجهة البحرية",
+        "Service d'étage":"خدمة الغرف",
+        "Chambres familiales":"خدمة الغرف",
+        "Pourquoi":"لماذا",
+        "clients ont fait le choix de Cote d'or ?":"اختار العملاء كوت دور؟",
+        "DÉCOUVREZ CE QUI FAIT NOTRE DIFFÉRENCE":"اكتشف ما الذي يصنع اختلافنا",
+        "L'hotel en Bref":"الفندق في سطور",
+        "INFORMATIONS PRATIQUES":"معلومات مفيدة",
+        "RESTAURANTS ET CAFEE":"مطاعم ومقاهي",
+        "ENVIRONS DE L'HOTEL ": "محيط الفندق",
+        "Adresse":"عنوان",
+        "Bon emplacement":"موقع جيد",
+        "voir la carte" :" اعرض الخريطة",
+        "Heure d'arrivée / de départ":"وقت الوصول",
+        "Enregistrement":" المغادرة",
+        " Heure de départmidi":"تسجيل الوصول",
+       
+        "Chambres":"غرف",
+        "chambres et suites et appartements":" غرفة وجناحًا وشقة",
+        "  WIFI,TV,coffre-fort dans la chambre,":"WIFI ، تلفزيون ، خزنة داخل الغرفة ،",
+        " Restaurant, cafetière / théière,":"مطعم ، ماكينة صنع القهوة / الشاي ",
+        "journal quotidien gratuit,":"صحيفة يومية مجانية ",
+        " produits de salle de bains":"منتجات الحمام",
+        " de bonne marque":"ذات العلامات التجارية الأعلى",
+        "Parking":"موقف السيارات",
+        "L'établissement ne dispose pas de parking.":"العقار لا يحتوي على موقف سيارات",
+        "Internet":"إنترنت",
+        "Espaces publics : gratuit":"الأماكن العامة: مجانًا",
+        " En chambre : gratuit":"داخل الغرفة: مجانًا",
+        "Accueil des enfants":"رعاية الأطفال",
+        "Enfants bienvenus":"نرحب بالأطفال",
+        "Services disponibles":"الخدمات المتاحة",
+        "Hôtel climatisé ":"مكيفة الهواء",
+        "Service de blanchisserie":"خدمة غسيل الملابس بالفندق ",
+        "Service de conciergerie":"خدمة الكونسيرج",
+        "Réception ouverte":"مكتب استقبال على مدار",
+        "Service d'étage ":"خدمة الغرف",
+        "Animaux de compagnie":"حيوانات",
+        "Chiens non autorisés ":"الكلاب غير مسموح بها",
+        "Politique fumeurs":"سياسة التدخين",
+        "Espaces publics non-fumeurs":"مناطق عامة لغير المدخنين",
+        "Chambres fumeurs disponibles":"تتوفر غرف للمدخنين",
+        "Langues parlées":"اللغات المنطوقة",
+        "Arabe":"عربي",
+        "Anglais":"انجليزي",
+        "Français":"فرنسي",
+        "Activités":"أنشطة",
+        "plage":"شاطئ",
+        "Général":"عام",
+        "Climatisation":"مكيف هواء",
+        "Chambres familiales ":"غرف عائلية",
+
+        
+    "Petit déjeuner":"فطور الصباح",
+    "Petit déjeuner continental":"إفطار كونتيننتال",
+    "Petit déjeuner américain ":"إفطار أمريكي",
+    "Petit déjeuner buffet":"إفطار بوفيه:",
+    "Petit déjeuner fitness":"إفطار لياقة بدنية",
+    "Petit déjeuner croque speciale":"إفطار كروك المميز",
+    "Petit déjeuner beldi":"إفطار بيلدي:",
+    "Petit déjeuner espagnol":"إفطار إسباني:",
+    "Soupe ":"شوربة",
+    " Poissons ":"سمك",
+    "Boissons":"مشروبات",  
+    "Thé à la menthe":"شاي بالنعناع",
+    "Café Noir":"قهوة سوداء",
+    "Thé noir":"شاي اسود",
+    "Café au lait ":"حليب قهوة",
+    "Café expresso (marque Lavazza)":"حليب قهوة إسبرسو (ماركة لافازا)",
+    " Louisa (verveine)":"لويزا",
+    "Jus d’orange":"عصير برتقال",
+    " Jus de fruits frais (selon saison)":"عصير فراولة  ",
+    " citron, fraises, melon, pomme, banane":" شمام ، تفاح ، موز (حسب الموسم): ليمون ، فراولة ،",
+    " Cocktail Chamali (betterave / orange / banane) ":"شمالي",
+    " Jus d'avocat":"عصير أفوكادو",
+    "carotte":"جزر ",
+    " Jus de concombre au citron et thym":"عصير خيار بالليمون والزعتر",
+	"Mojito":"موهيتو",
+    "crêpes salées":"كريب",
+    "Salades":"سلطة",
+    "Salade marocaine":"سلطة مغربية ",
+    "Salade César":"سلطة سيزر",
+    "Salade de riz aux légumes croquants":"سلطة أرز مع خضروات مقرمشة",
+    "Salade de tomates au basilic":"سلطة طماطم مع ريحان",
+    "Salade de bœuf à la vietnamienne":"سلطة لحم فيتنامية",
+    "Patisserie":"حلويات",
+    "Cornets au sesame amande et miel":"كورنيت بالسمسم واللوز والعسل",
+    "Corne de gazelle-Kaab leghzal":"قرن غزال-كعب لغزال",
+    "Ghribas aux noix et aux amandes":"غريبس بالجوز واللوز",
+    "Cigares aux amandes":"سيجار مع اللوز",
+    "Sablés fondant à la noisette":"عجينة الفوندان بالبندق",
+    "Desserts":"حلويات",
+    "Tarte Oreo":"أوريو تارت",	
+    "Cake à la ricotta et au citron":"ريكوتا و ليمون كيك",
+    "Salade de fruits":"سلطة فواكه",
+    "Plats marocains":"أطباق مغربية",
+    "Tiramisu":"تيراميسو",
+   "Fast Food":"الطعام السريع",
+   "Pizza":"بيتزا",
+   "Tacos":"تاكو",
+   "Panini":"بانيني",
+   "Chawarma":"شاورما",
+   "Burger":"برجر",
+   "Pastilla":"بسطيلة",
+"Tajine":"طاجين",
+"Harira":"حريرة",
+"Couscous":"كسكس",
+"Refissa":"رفيسا",
+"Seffa":"سفة",
+"Mrouzia":"مروزية",
+"Mechoui":"مشوي",
+"Tangia":"تانجيا",
+"Soupe":"شوربة",
+"Poissons":"بواسون",
+
+"Lieux à proximité":"الاماكن المجاورة",
+    "Parque Ziana:":"حديقة زيانا",
+    "Restaurants et cafés":"مطاعم وكافيهات",
+    "Plages à proximité":"الشواطئ القريبة",
+    "Plage de M'Diq":"شاطئ المضيق",
+    "Aéroports les plus proches":"أقرب المطارات",
+    "Aéroport Tétouan - Sania R'mel":"تطوان - مطار سانية الرمل",
+    "Aéroport international de Gibraltar":"مطار جبل طارق الدولي",
+    "Aéroport de Tanger - Ibn Battouta":"طنجة - مطار ابن بطوطة",
+    "Infos generals":"معلومات عامة",
+    "Situé à 400 mètres de la plage de M'Diq":"يقع فندق Cote D'or M'diq على بعد 400 متر من شاطئ المضيق",
+    " l'hotel cote d'or m'diq propose un hébergement":" أماكن إقامة ذات نجمتين ويوفر",
+
+    " étoiles et un restaurant à M'diq":" ومطعمًا في المضيق",
+    "  Cet hôtel":"يوفر هذا الفندق ",
+    "étoiles propose un service d'étage ":"ذو النجمتين خدمة الغرف",
+    "et une réception ouverte":"ومكتب استقبال يعمل على مدار",
+    " Certaines":"بعضها",
+    "  s'ouvrent sur une terrasse avec vue sur la mer":"على تراس مع إطلالات على البحر",
+    "L'aéroport de Tétouan-Sania R'mel, le plus proche," :"ويقع أقرب مطار وهو مطار تطوان سانية الرمل على بعد 17 كم من مكان الإقامة",
+    "  est implanté à":"يقع في",
+    "Jardin Corniche Rincon":"جاردين كورنيش رينكون",
+"Jardin de Corniche 2":"حدائق الكورنيش 2", 
+"Place Corniche de M'diq":"مكان كورنيش المضيق",
+"Jardin d'Hopital Mohamel 6":"جاردان دوبيتال محمد 6", 
+"Jardin de Government Office de M'diq":"مكتب جاردان دو الحاكم في المضيق",
+"Place Palestine":"مكان فلسطين",
+"Wilaya":"ولاية",
+"Futsal Chawdri":"كرة الصالات شودري", 
+"Parc Ryad":"بارك رياض",
+"Parque Ziana":"بارك زيانا",
+"RestaurantLa Corniche":" مطعم الكورنيش",
+"RestaurantNourain":"مطعم نورين",
+"Café / barChez Bilal":"مقهى / بارشيز بلال",
+"Kabila Beach":"شاطئ كابيلا",
+"Cabo Negro Beach":"شاطئ كابو نيغرو",
+"Marina Smir Beach":"مارينا سمير بيتش",
+"Martil Beach":"شاطئ مرتيل",
 
     "(and :count more error)": "(و :count خطأ إضافي)",
     "(and :count more errors)": "(و :count أخطاء إضافية)",
