--- a/lang/ar.json
+++ b/lang/ar.json
@@ -38,6 +38,18 @@
 
 
 
+    "Liens Rapides" : "روابط سريعة",
+    "Liens Supplémentaires" : "روابط إضافية",
+    "Poser des questions" : "اسال اسئلة",
+    "Service d'été" : "خدمة الصيف",
+    "Près de nous" : "قريب منا",
+    "Les offres de Cote d'Or" : "Cote d'Or عروض",
+    "Infos de contact" : "معلومات الاتصال",
+    "Tous les droits sont réservés!" : "كل الحقوق محفوظة",
+    "Suivez-nous" : "تابعنا",
+
+
+
     "(and :count more error)": "(و :count خطأ إضافي)",
     "(and :count more errors)": "(و :count أخطاء إضافية)",
     "A new verification link has been sent to the email address you provided during registration.": "تم إرسال رابط تحقق جديد إلى عنوان البريد الإلكتروني الذي قمت بالتسجيل به.",
