ar for our rooms

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -36,6 +36,24 @@
     "Regarder la galerie" : "مشاهدة المعرض",
 
 
+    "NOS CHAMBRES" : "الغرف",
+    "Equipée de lits confortables, de tables de chevet avec des lampes de lecture, d'un bureau et d'une chaise pour travailler, ainsi que d'une télévision à écran plat pour se divertir. La chambre dispose également d'une salle de bain privative avec douche ou baignoire, serviettes et articles de toilette de base. " : ".مجهزة بأسرة مريحة وطاولات بجانب السرير مع مصابيح للقراءة ومكتب وكرسي للعمل وجهاز تلفزيون بشاشة مسطحة للترفيه. تحتوي الغرفة أيضًا على حمام خاص مع دش أو حوض استحمام ومناشف ولوازم استحمام أساسية",
+    "Détails et photos" : "التفاصيل والصور",
+    "avec petit déjeuner" : "مع الافطار",
+    "Chambre Simple" : "غرفة بسيطة",
+    "Chambre Double" : "غرفة مزدوجة",
+    "Chambre Triple" : "غرفة ثلاثية",
+    "Chambre Quadruple" : "غرفة رباعية",
+    "Suite" : "جناح",
+    "Appartement" : "شقة",
+    "Prix par nuit:" : ":سعر الليلة الواحدة",
+    "Annulation GRATUITE avant minimum 1 semaine":"إلغاء مجاني قبل أسبوع واحد على الأقل",
+    "PAYEZ PLUS TARD" : "ادفع لاحقا",
+    "INCLUS DANS LE TARIF (1)" : "(1)المدرجة في المعدل",
+    "Petit déjeuner pour deux chaque jour":"الإفطار لشخصين كل يوم",
+    "Pour bénéficier, de nos offres , vous pouvez réserver avant plus d'une semaine " : "للاستفادة من عروضنا يمكنك الحجز قبل أكثر من أسبوع",
+    "Retour à la liste des chambres" : "العودة إلى قائمة الغرف",
+
 
 
     "Liens Rapides" : "روابط سريعة",
